@@ -1,29 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX tins-0.4.3-gentoo.patch 1120 SHA256 431dd134efe18271c36df661f4838000f51f72eef2930834e84faf0cfb79ce39 SHA512 9722cd92298dad9545f7580234566d6ce034be65dec381dbfcb4c3c37701d084318308a1f86f7d149a9f80884b1b9bbe0c92f5ae9b86144bd81ae62f343731d1 WHIRLPOOL a21fca19fe10dbf98e860f074f916b36c286de6ba6b117a15d792c6631eebe0afa76a7222da90e3c2501cd825c14190719071f26c8de3bb6d4b9843e525215e9
-DIST tins-0.3.14.gem 28160 SHA256 e30bb2a890a6f29a2cc522f4c27c6bfc3af5fb4db0fc3e5da9c086bf3afeb55b SHA512 cded23fbb5ffff89bea22e2deb9f178a5a87d99037c62144f5dca839a89fa808dffdf98a14e25353dd00e67231d1dd8155c8e7e0b8452c298a0dfc73f5098635 WHIRLPOOL 20053a2d03a0aac52c6335485d517e347ab601e41bbf7433dd19e416ffdab927c5d2ea18c99a4851c161d4ced38df43b68b3569029921e82e72ac1b2feb039c3
 DIST tins-0.6.0.gem 29696 SHA256 dc8ac56d37ec8a71786361fa8b2840ca032856b91cb279f06c542fdc3b4cb479 SHA512 79318f7b08b4478d1aa8f7d8dd86be377ec9655e5a6e62d0d193b7f1db6925c578cfb3fbc54efd76e7be54eaec22986bf79612bd2f4b6eb59934ecfddddcc4be WHIRLPOOL 1b8031c7342c6ea6e93b627c975dfef2d0941dd05118c21f3c97d7924f29d9913b33e7fe95fcd2d6c8e5165f88183d480acd23fa2179efe66d753c36997728e3
 DIST tins-0.7.2.gem 31744 SHA256 20fdbc2315e043f73fdb98f2718423e28e691ec1afb4ddf88c1c0581ecdb5590 SHA512 5b1b1e6c5274624c68e92fafee364f1f0ef7ba4f5e2b3c14107c5118fb1af89ff8e2e7fba862c07f49785e88944623c5f0a5f73ad085909a6de6f309204fd41b WHIRLPOOL 20c3a270757062196f731469dd4fab1ef4e8ba00c125a9c27e6f5202a106965eab6306db19c8adb35e35dce85a908280dca033e7ff8a082cd5391cdbe914d8e3
-EBUILD tins-0.3.14.ebuild 932 SHA256 3c1b0eec719b3fca68cf0883b0b008dab7cf108ba255c270d92adc6439e74e2a SHA512 dcaf41c8576e955bc0021b2f751566061f75ebd40ca8f40bbdbbd657ef4d182ddb25c347a39e84242be123bd119adb258b79aa13c671e00fdf4836857ac2bcd0 WHIRLPOOL 04b38419221c13e045499032e40a3c7e540ca9fcc91f63a6b736207bcb34a8be817fd668e29bc77b26462f526ac41e7c15515a58b71d4c2506f0daa110c689ad
 EBUILD tins-0.6.0.ebuild 716 SHA256 538192527b7e28a9e748c30398c3de3387a3122bbc98886e61eed940e85b796d SHA512 9f8aba8111682f33e34a950a27e26384c3d05e8c59c1b092ea3e6f6ad54aee656fe84e8631e9dec1aa695465b68a2b8179e45ef272f14de2e7c4b53acda136e8 WHIRLPOOL 94938340f039e5450fd7a6d58d44f230d76861da6bde2f9b4d52ec79d85bd4db9902dd4b2ae7550af7afbe4209899d09cb75c5b5661e92ee9dd9b435aac44336
 EBUILD tins-0.7.2.ebuild 715 SHA256 c5a9a01d59e49879f565fc231087998d515496a8e59d18f5957fdb93359eccf1 SHA512 c774f9dc6f53cc37e741ea6c666c68cdb56e956ac96fdcaff16e7d06b6fe026e0c65a4083f35b18a415e7d0d02929d05f4615cecdf50f67b3b960d52d4f62b0c WHIRLPOOL 571460d1d67237a0c4f4c00c2837d753efde9287f432414b130a2dbfc89ab83f1d8871f585b92e863b893ad320f6f67058ae06a6a6787084d4123bc6e52c2ff8
-MISC ChangeLog 2383 SHA256 4e7ca48805e4dcc4ec2bdf501bcdf9e94cb26f1aafe3f023b8cd34422e730f32 SHA512 3db29b7cd410e30ace5bea81575f49565bb1148f10beef80be18d65aaff4cb207848d0d0dfe62fffbb2763de24d49d20f7c86a8510aa57447e151a7fc2854f59 WHIRLPOOL 59da45ebd514993710c35df7a658e261eaf47d0dc9ac79a824a539fe6cf7da2d59b54739add8d76cac5546eac8e105feafaf8d93c6f3e90de194486effab29f4
+MISC ChangeLog 2469 SHA256 872dba53c6747a3d9de7ac653481b7fc413d625937f6a86892a48bf78e18ce5d SHA512 e18042674a88ceb571653d7a780192442ed0e7bdd2b4a4dc97e6fbbecf5567ebf0e3a203cd63dff564a94501ee20643afa84493cff8a3715f96c1aef36c29b48 WHIRLPOOL 6b5200f595229d22836b77ef4c7519ec5c881ce8086dd6436b276b80d568d311a3fcdbf0c2eeb7bb6834492c1b521af794d6991df6b065cf254c4bb3253e0ce9
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRgPA6AAoJELp701BxlEWfv/kP/imueWjNk7MBoedH+W6+fX3G
-A7d5H7LMAsf01P3ogz371TYJqzcISPN129gKAPGSk5dot9/ziPpTgZBYAneJwmEl
-ADBikxdaO687LLF6qQ3kZmeHFpxOyzNdwgeN1tRs+QAnvvPsSkx8wTt32LvbIX78
-UPa830K6cupoBIV0XYTDe29lWm0Hoe7noPBqBaoDR61lPxwAleSe3M662r3sB3I2
-k41UKtk/QmnQwmW5LLYjf7aiT+FN7dDeLCiAILN9jyTiEUKmhqOD83KmfFdFZIS/
-xm6Uz1UIDfKB9oKvHY9YcKjy9b8kfFiNbw/SraMNCmGd+0Fnyf43qTvz5UswhuY7
-Q7987RK5054vkH8FvO6wt1Im2yGSO9o2e9eWMyAfWjpe6xw5uSeK2wSMO74l8gMc
-b0JNuKoooDZrUQ+VM0XFGq4nOR1YILqZExm1mAJQ+zcdtjvztCcTmwrC3rE2Dw+E
-PLahcpFJ4AKkCcHR6Xy9oYAeYhEk0SDsbOoPbjghiKSnx9otC2sFLf8sbuD5nAyn
-X5hA39wG3mNWOiXXr2kJAkFN5zL7KTJ3ycV5BwOr4Mfp+MpoNaEIDuDKB4lAEZdd
-98wcWUYKOMBB6iIAuwWoMd8NjQ5qbm5giTWApDqbKy63ypngBNL0Iu6lhCdmOKdL
-WdWdStCEPgry6Yf+wZFK
-=Dz9A
+iF0EAREIAAYFAlGQcmEACgkQiIP6VqMIqNepJQD4oaZXJMn5o4kqoYFwPXaNzHmE
+V+QlqbXC+mnQ+773IwD/RZ3l+E0AHZYiZIH7HEItfP1WshdyUS7qM0Mc92ZyAh4=
+=Sx3f
 -----END PGP SIGNATURE-----
