@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/tins
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tins/ChangeLog,v 1.17 2013/05/01 10:36:51 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tins/ChangeLog,v 1.18 2013/05/13 04:55:55 graaff Exp $
+
+  13 May 2013; Hans de Graaff <graaff@gentoo.org> -tins-0.3.14.ebuild:
+  Cleanup.
 
   01 May 2013; Agostino Sarubbo <ago@gentoo.org> tins-0.6.0.ebuild:
   Stable for x86, wrt bug #466618
